adicionado swagger com remoção de filmes
